<resources>
    <string name="app_name">TestApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="map_fragment_label">First Fragment</string>
    <string name="config_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Back">Back</string>
    <string name="friend">friend</string>
    <string name="message">message</string>
    <string name="around">around</string>
    <string name="login_fragment_label">login_fragment_label</string>
    <string name="login">LOGIN</string>
    <string name="login_screen">Login Screen</string>
    <string name="msg_hello">hello</string>
    <string name="msg_accident">accident</string>
    <string name="title_friend_list">friend_list</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="name_id">Name/ID</string>
    <string name="friendList">친구목록</string>
    <string name="ban">차단목록</string>
    <string name="alarm">알림기능</string>
    <string name="recommend">친구추천</string>
    <string name="carcolor">차량색</string>
    <string name="carnumber">차번호</string>
    <string name="blue">BLUE</string>
    <string name="red">RED</string>
    <string name="grey">GREY</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="please_select_color_of_your_vehicle">Please select color of your vehicle</string>

    <!-- Naver Login -->
    <string name="naver_client_id">cknsa1k3G_xZP5DOWTBQ</string>
    <string name="naver_client_secret">j7DgHc4EVX</string>
    <string name="naver_client_name">Mare_Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_fragment_label">signup_fragment_label</string>
    <string name="get_started">Get Started</string>
    <string name="mare_title">MARE</string>
</resources>