<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/please_select_color_of_your_vehicle"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="14dp" />

        <Button
            android:id="@+id/button_black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/black"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/white" />

        <Button
            android:id="@+id/button_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:text="@string/grey" />

        <Button
            android:id="@+id/button_blue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="#0000FF"
            android:text="@string/blue"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_red"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="#FF0000"
            android:text="@string/red"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>