<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.testapplication.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_SignupFragment"
            app:destination="@id/SignupFragment" />
    </fragment>
    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.example.testapplication.SignupFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_SignupFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_SignupFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="com.example.testapplication.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_MapFragment_to_ConfigFragment"
            app:destination="@id/ConfigFragment" />
    </fragment>
    <fragment
        android:id="@+id/ConfigFragment"
        android:name="com.example.testapplication.ConfigFragment"
        android:label="@string/config_fragment_label"
        tools:layout="@layout/fragment_config">

        <action
            android:id="@+id/action_ConfigFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
    </fragment>
</navigation>