<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapFragment">

    <fragment
        android:id="@+id/map_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.naver.maps.map.MapFragment"/>

    <!-- todo. change switch to swich compat or something -->
    <Switch
        android:id="@+id/switch_current_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        app:layout_constraintRight_toRightOf="parent"
        android:text="position update" />
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_marginRight="7dp"-->

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_message"/>
    <Button
        android:id="@+id/button_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_friend"
        app:layout_constraintRight_toLeftOf="@id/button_around"/>
    <Button
        android:id="@+id/button_around"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/around"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_message"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--        app:layout_constraintTop_toBottomOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>